Date	Added

2006/09/14
	* Adjusted gvg long damage rate to 80%, magic damage rate to 60%
	  (battle/guild.conf) [Skotlex]
2006/09/12
	* Changed back the default of case-sensitive to ON since it shouldn't be
	  such a bad performance hog now. [Skotlex]
	* case_sensitive is now off by default due to performance issues
	  (login_athena.conf). [Skotlex]
2006/09/11
	* Corrected name of config settings pc_luk_status_def, mob_luk_status_def
	  (status.conf) [Skotlex]
	* Changed the default of enable_baseatk to 9 (player + homun) [Skotlex]
	* Changed the default of enable_perfect_flee to 1 (players only) [Skotlex]
2006/09/09
	* Removed noteleport flags from Geffenia maps [Playtester]
2006/09/08
	* Removed sg_miracle_skill_duration, replaced it with
	  sg_miracle_skill_min_duration and sg_miracle_skill_max_duration, to specify
	  a range for the duration of the skill. [Skotlex]
	* Skill duration for sg miracle is now 1h ~ 2.5h [Skotlex]
2006/09/07
	* Changed the default of sg_angel_skill_ratio to 10 based on recent
	  information from Tharis. [Skotlex]
	* Added sg_angel_skill_ratio to specify rate at which the Angel skill
	  triggers. [Skotlex]
	* Increased duration of Miracle of the Sun/Moon/Stars to one hour.
	  [Skotlex]
	* Changed gvg_short_attack_damage_rate to 80, as leaked X.2 [Vicious]
2006/09/06
	* Reverted back the default view/chase range of mobs to 100% since eA now
	  uses square view areas, like Aegis. [Skotlex]
2006/09/05
	* Removed setting mob_show_hp, it's been replaced now by mob_show_info,
	  which can be used to specify what kind of info should be displayed from a
	  mob. Current options are two different formats for Hp display, and current
	  level (monster.conf). [Skotlex]
2006/08/31
	* Added setting attack_walk_delay which specifies whether a character
	  should (or not) be able to move inmediately after starting a normal attack
	  (battle.conf). Defaults to 0 since that's what Aegis uses. [Skotlex]